--- a/pillar.conf
+++ b/pillar.conf
@@ -2,10 +2,9 @@
   "base_url": "",
   "site_name": "STON",
   "title": "STON",
-  "author" : "Sven van Caekenberghe",
-  "attribution": "The Pillar team",
+  "attribution": "Sven van Caekenberghe",
   "series": "Square Bracket tutorials",
-  "keywords": "project template, Pillar, Pharo, Smalltalk",
+  "keywords": "JSON, Serialization, STON, Pharo, Smalltalk",
   "epub-id": "urn:uuid:A1B0D67E-2E81-4DF5-9E67-A64CBE366809",
   #'"tocFile": "index.pillar" if you have a index.pillar file containing the table of contents of your book': #comment,
   "latexWriter" : #'latex:sbabook',
