--- a/pillar.conf
+++ b/pillar.conf
@@ -1,12 +1,1 @@
-{
-  "base_url": "",
-  "site_name": "STON",
-  "title": "STON",
-  "attribution": "Sven van Caekenberghe",
-  "series": "Square Bracket tutorials",
-  "keywords": "JSON, Serialization, STON, Pharo, Smalltalk",
-  "epub-id": "urn:uuid:A1B0D67E-2E81-4DF5-9E67-A64CBE366809",
-  #'"tocFile": "index.pillar" if you have a index.pillar file containing the table of contents of your book': #comment,
-  "latexWriter" : #'latex:sbabook',
-  "htmlWriter": #html
-}
+{	"base_url" : "",	"attribution" : "Sven van Caekenberghe",	"keywords" : "JSON, Serialization, STON, Pharo, Smalltalk",	"title" : "STON: an  Object Notation for Pharo",	"series" : "Square Bracket tutorials",	"htmlWriter" : "html",	"latexWriter" : "miclatex:sbabook",	"site_name" : "STON",	"\"tocFile\": \"index.pillar\" if you have a index.pillar file containing the table of contents of your book" : "comment"}
